--- a/Antonio/chat/package.json
+++ b/Antonio/chat/package.json
@@ -9,9 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
+    "jquery": "^3.4.1",
     "node.js": "0.0.0",
+    "popper.js": "^1.15.0",
+    "sass": "^1.22.10",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0"
   },
